css/main.css
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Raleway', sans-serif;
}
/**** HEADER ****/

.header {
  background-color: #f6f7f9;
}

.header .wrapper {
  padding: 0 100px;
  margin: 0 auto;
  max-width: 1000px;
  align-items: center;
  display: flex;
  justify-content: space-between;
  height: 45px;
}

.header__logo h1 {
  font-family: 'Raleway', sans-serif;
  font-size: 20px;
  text-transform: uppercase;
  margin: 0;
  letter-spacing: 1px;
}

.header__navigaiton ul {
  list-style: none;
}

.header__navigation li {
  display: inline-block;
  margin: 0 7px;
}

.header__navigation a {
  text-transform: uppercase;
  text-decoration: none;
  font-size: 11.5px;
  font-weight: 700;
  color: #000;
}

/**** HERO ****/

.hero {
  background-image: url('../img/image-1.jpg');
  height: 525px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
}

.hero .wrapper {
  padding: 60px;
  margin: 0 auto;
  height: 245px;
  width: 610px;
  background: rgba(255, 255, 255, 0.9);
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
}

.hero__content h1 {
  font-size: 26px;
  font-weight: 600;
  text-transform: uppercase;
  margin: 0;
}

.hero__content h2 {
  font-size: 14px;
  font-family: 'Noto Serif', serif;
  font-style: italic;
  font-weight: 500;
  margin-bottom: 5px;
}

.hero__content p {
  font-size: 14px;
  line-height: 1.7;
  font-weight: 500;
}

/**** Blog ****/
.blog {
  padding-top: 55px;
  text-align: center;
}

.blog .wrapper {
  max-width: 1000px;
  margin: 0 auto;
  padding: 0 100px;
}

.blog h2 {
  text-transform: uppercase;
}

.blog__list {
  padding-top: 20px;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.blog__entry {
  flex-basis: 250px;
  margin-bottom: 25px;
  background-color: #f6f7f9;
}

